Adds drop-down menu to points in sidebar categories

--- a/index.html
+++ b/index.html
@@ -355,104 +355,140 @@
           <h3 class="sidebar-categories__title">Categories</h3>
           <ul class="sidebar-categories__list list-group">
             <li class="sidebar-categories__item list-group-item list-group-item-action">
-              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Notebook
-                <ul class="sidebar-categories__sub-list">
-                  <li><a href="#">Two level
-                      <ul class="sidebar-categories__sub-list">
-                        <li>
-                          <a href="#">Three level
-                            <ul class="sidebar-categories__sub-list">
-                              <li><a href="#">Super deep level
-                                <ul class="sidebar-categories__sub-list">
-                                  <li><a href="#">Deep web!
-                                    <ul class="sidebar-categories__sub-list">
-                                      <li><a href="#">Silent house...</a></li>
-                                    </ul>
-                                  </a></li>
-                                </ul>
-                              </a></li>
-                            </ul>
-                          </a>
-                        </li>
-                      </ul>
-                    </a>
-                   </li>
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Notebook</a>
+              <div class="sidebar-categories__drop-down">
+                <ul class="drop-down__list">
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor (hover me)</a>
+                    <ul>
+                      <li><a href="#">Structure</a>
+                        <ul>
+                          <li><a href="#">Super Deep level</a></li>
+                          <li><a href="#">Super Deep level</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#">Structure</a></li>
+                      <li><a href="#">Structure</a></li>
+                      <li><a href="#">Structure</a></li>
+                      <li><a href="#">Structure</a></li>
+                    </ul>                    
+                  </li>                  
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor (hover me)</a>
+                    <ul>
+                      <li><a href="#">Structure</a>
+                        <ul>
+                          <li><a href="#">Super Deep level</a></li>
+                          <li><a href="#">Super Deep level</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#">Structure</a></li>
+                    </ul> 
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor (hover me)</a>
+                    <ul>
+                      <li><a href="#">Structure</a>
+                        <ul>
+                          <li><a href="#">Super Deep level</a></li>
+                          <li><a href="#">Super Deep level</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#">Structure</a></li>
+                    </ul>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor (hover me)</a>
+                    <ul>
+                      <li><a href="#">Structure</a>
+                        <ul>
+                          <li><a href="#">Super Deep level</a></li>
+                          <li><a href="#">Super Deep level</a></li>
+                        </ul>
+                      </li>
+                      <li><a href="#">Structure</a></li>
+                    </ul>
+                  </li>
                 </ul>
-              </a>              
+                <ul class="drop-down__list">
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                </ul>
+                <ul class="drop-down__list">
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                </ul>
+                <ul class="drop-down__list">
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                  <li class="drop-down__item">
+                    <a href="#" class="drop-down__link">Lorem ipsum dolor</a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
-              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">tablet
-                <ul class="sidebar-categories__sub-list">
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                </ul>
-              </a>
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">tablet</a>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
-              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Electronic books
-                <ul class="sidebar-categories__sub-list">
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                </ul>
-              </a>
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Electronic books</a>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
-              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Computers
-                <ul class="sidebar-categories__sub-list">
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                </ul>
-              </a>
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Computers</a>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
-              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Components
-                <ul class="sidebar-categories__sub-list">
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                </ul>
-              </a>
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Components</a>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
-              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Office equipment
-                <ul class="sidebar-categories__sub-list">
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                </ul>
-              </a>
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Office equipment</a>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
-              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">games
-                <ul class="sidebar-categories__sub-list">
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                </ul>
-              </a>
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">games</a>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
-              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Network equipment
-                <ul class="sidebar-categories__sub-list">
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                </ul>
-              </a>
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Network equipment</a>
             </li>
             <li class="sidebar-categories__item list-group-item list-group-item-action">
-              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Accessories
-                <ul class="sidebar-categories__sub-list">
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                  <li><a href="#">Two level</a></li>
-                </ul>
-              </a>
+              <a href="#" class="sidebar-categories__link icon-font-angle-arrow-down">Accessories</a>
             </li>
           </ul>
         </div>
