Changes images in popular categories

--- a/index.html
+++ b/index.html
@@ -1629,7 +1629,7 @@
           <div class="popular-prods__list row">
             <div class="popular-prods__item col-4 mb-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-4">
-                <img src="img/product_image-7.jpg" alt="Popular product images">
+                <img src="img/pop_prod-1.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
@@ -1652,7 +1652,7 @@
             </div>
             <div class="popular-prods__item col-4 mb-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-4">
-                <img src="img/product_image-7.jpg" alt="Popular product images">
+                <img src="img/pop_prod-2.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
@@ -1675,7 +1675,7 @@
             </div>
             <div class="popular-prods__item col-4 mb-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-4">
-                <img src="img/product_image-7.jpg" alt="Popular product images">
+                <img src="img/pop_prod-3.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
@@ -1698,7 +1698,7 @@
             </div>
             <div class="popular-prods__item col-4 mb-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-4">
-                <img src="img/product_image-7.jpg" alt="Popular product images">
+                <img src="img/pop_prod-4.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
@@ -1721,7 +1721,7 @@
             </div>
             <div class="popular-prods__item col-4 mb-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-4">
-                <img src="img/product_image-7.jpg" alt="Popular product images">
+                <img src="img/pop_prod-5.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
@@ -1744,7 +1744,7 @@
             </div>
             <div class="popular-prods__item col-4 mb-3">
               <a href="#" class="popular-prods__img hov-btn-call mb-4">
-                <img src="img/product_image-7.jpg" alt="Popular product images">
+                <img src="img/pop_prod-6.jpg" alt="Popular product images">
               </a>
               <div class="hover-buttons__list">
                 <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
