Creates sidebar-sale slider by BS(Bootstrap 4)

--- a/index.html
+++ b/index.html
@@ -1364,6 +1364,36 @@
             </li>
           </ul>
         </div>
+        <div class="sidebar__sale carousel slide" id="sidebar-sale" data-ride="carousel">
+          <ol class="carousel-indicators main-banner__dot-list">
+            <li class="main-banner__dot active" data-target="#sidebar-sale" data-slide-to="0"></li>
+            <li class="main-banner__dot" data-target="#sidebar-sale" data-slide-to="1"></li>
+            <li class="main-banner__dot" data-target="#sidebar-sale" data-slide-to="2"></li>
+            <li class="main-banner__dot" data-target="#sidebar-sale" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="sidebar-sale__img">
+                <img src="img/sidebar_sale-1.png" alt="#">
+              </div>
+              <div class="sidebar-sale__counter"></div>
+              <div class="sidebar-sale__title item__title mb-1">Magnetic Headphones</div>
+              <div class="sidebar-sale__price-list item__price-list mb-3">
+                <span class="item__price item__price--old mx-1">$350</span>
+                <span class="item__price item__price--new mx-1">$299,99</span>
+              </div>
+              <a href="#" class="sidebar__btn btn custom-btn mt-2">shop now</a>
+            </div>
+          </div>
+          <a class="carousel-control-prev main-banner__arrow-side" href="#sidebar-sale" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon main-banner__arrow" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next main-banner__arrow-side" href="#sidebar-sale" role="button" data-slide="next">
+            <span class="carousel-control-next-icon main-banner__arrow" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
       </div>
       <div class="content col-9">
         <section class="prod-categories">
@@ -1637,7 +1667,7 @@
                 <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
               </div>
               <span class="item__category">category</span>
-              <a href="#" class="item__titl">Asus-PadFone</a>
+              <a href="#" class="item__title">Asus-PadFone</a>
               <div class="item__rating my-1">
                 <span class="icon-font-star-solid"></span>
                 <span class="icon-font-star-solid"></span>
