Adds margin bottom to sidebar categories

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
   <main class="container">
     <div class="row">
       <div class="sidebar col-3">
-        <div class="sidebar__categories">
+        <div class="sidebar__categories mb-4">
           <h3 class="sidebar-categories__title">Categories</h3>
           <ul class="sidebar-categories__list list-group">
             <li class="sidebar-categories__item list-group-item list-group-item-action">
