--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,9 @@
               <div class="sidebar-sale__img">
                 <img src="img/sidebar_sale-1.png" alt="#">
               </div>
-              <div class="sidebar-sale__counter"></div>
+              <div class="sidebar-sale__counter mt-4">
+                <script src="//megatimer.ru/get/92a0bdebda79c3b4c7b4c21139ff969f.js"></script>
+              </div>
               <div class="sidebar-sale__title item__title mb-1">Magnetic Headphones</div>
               <div class="sidebar-sale__price-list item__price-list mb-3">
                 <span class="item__price item__price--old mx-1">$350</span>
