Enable slider by BS 4 and creates other 3 slides

--- a/index.html
+++ b/index.html
@@ -1386,6 +1386,48 @@
               </div>
               <a href="#" class="sidebar__btn btn custom-btn mt-2">shop now</a>
             </div>
+            <div class="carousel-item">
+              <div class="sidebar-sale__img">
+                <img src="img/sidebar_sale-1.png" alt="#">
+              </div>
+              <div class="sidebar-sale__counter mt-4">
+                <script src="//megatimer.ru/get/92a0bdebda79c3b4c7b4c21139ff969f.js"></script>
+              </div>
+              <div class="sidebar-sale__title item__title mb-1">Magnetic Headphones</div>
+              <div class="sidebar-sale__price-list item__price-list mb-3">
+                <span class="item__price item__price--old mx-1">$350</span>
+                <span class="item__price item__price--new mx-1">$299,99</span>
+              </div>
+              <a href="#" class="sidebar__btn btn custom-btn mt-2">shop now</a>
+            </div>
+            <div class="carousel-item">
+              <div class="sidebar-sale__img">
+                <img src="img/sidebar_sale-1.png" alt="#">
+              </div>
+              <div class="sidebar-sale__counter mt-4">
+                <script src="//megatimer.ru/get/92a0bdebda79c3b4c7b4c21139ff969f.js"></script>
+              </div>
+              <div class="sidebar-sale__title item__title mb-1">Magnetic Headphones</div>
+              <div class="sidebar-sale__price-list item__price-list mb-3">
+                <span class="item__price item__price--old mx-1">$350</span>
+                <span class="item__price item__price--new mx-1">$299,99</span>
+              </div>
+              <a href="#" class="sidebar__btn btn custom-btn mt-2">shop now</a>
+            </div>
+            <div class="carousel-item">
+              <div class="sidebar-sale__img">
+                <img src="img/sidebar_sale-1.png" alt="#">
+              </div>
+              <div class="sidebar-sale__counter mt-4">
+                <script src="//megatimer.ru/get/92a0bdebda79c3b4c7b4c21139ff969f.js"></script>
+              </div>
+              <div class="sidebar-sale__title item__title mb-1">Magnetic Headphones</div>
+              <div class="sidebar-sale__price-list item__price-list mb-3">
+                <span class="item__price item__price--old mx-1">$350</span>
+                <span class="item__price item__price--new mx-1">$299,99</span>
+              </div>
+              <a href="#" class="sidebar__btn btn custom-btn mt-2">shop now</a>
+            </div>
           </div>
           <a class="carousel-control-prev main-banner__arrow-side" href="#sidebar-sale" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon main-banner__arrow" aria-hidden="true"></span>
