Creates tags in sidebar

--- a/index.html
+++ b/index.html
@@ -1438,6 +1438,20 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
+        <div class="sidebar__tags">
+          <h4 class="sidebar-tags__title item__title mb-3">product tags</h4>
+          <a href="#" class="sidebar-tags__item">Illegal</a>
+          <a href="#" class="sidebar-tags__item">Accessories</a>
+          <a href="#" class="sidebar-tags__item">Sale</a>
+          <a href="#" class="sidebar-tags__item">Jeans</a>
+          <a href="#" class="sidebar-tags__item">Fashion</a>
+          <a href="#" class="sidebar-tags__item">Illegal</a>
+          <a href="#" class="sidebar-tags__item">Accessories</a>
+          <a href="#" class="sidebar-tags__item">Sale</a>
+          <a href="#" class="sidebar-tags__item">Jeans</a>
+          <a href="#" class="sidebar-tags__item">Fashion</a>
+          <a href="#" class="sidebar-tags__item">Accessories</a>
+        </div>
       </div>
       <div class="content col-9">
         <section class="prod-categories">
