--- a/index.html
+++ b/index.html
@@ -1364,7 +1364,7 @@
             </li>
           </ul>
         </div>
-        <div class="sidebar__sale carousel slide" id="sidebar-sale" data-ride="carousel">
+        <div class="sidebar__sale mb-4 carousel slide" id="sidebar-sale" data-ride="carousel">
           <ol class="carousel-indicators main-banner__dot-list">
             <li class="main-banner__dot active" data-target="#sidebar-sale" data-slide-to="0"></li>
             <li class="main-banner__dot" data-target="#sidebar-sale" data-slide-to="1"></li>
@@ -1438,7 +1438,7 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-        <div class="sidebar__tags">
+        <div class="sidebar__tags mb-4">
           <h4 class="sidebar-tags__title item__title mb-3">product tags</h4>
           <a href="#" class="sidebar-tags__item">Illegal</a>
           <a href="#" class="sidebar-tags__item">Accessories</a>
@@ -1451,6 +1451,12 @@
           <a href="#" class="sidebar-tags__item">Jeans</a>
           <a href="#" class="sidebar-tags__item">Fashion</a>
           <a href="#" class="sidebar-tags__item">Accessories</a>
+        </div>
+        <div class="sidebar__promo">
+          <div class="banner__category mb-1">smart watch</div>
+          <h5 class="sidebar-promo__title banner__title mb-4">your need</h5>
+          <a href="#" class="sidebar__btn btn custom-btn">shop now</a>
+          <img src="img/Promo-image2.jpg" alt="Promo product in sidebar promo!">
         </div>
       </div>
       <div class="content col-9">
