--- a/index.html
+++ b/index.html
@@ -1863,6 +1863,11 @@
         </section>
       </div>
     </div>
+    <div class="bottom-banners row">
+      <div class="second-bottom-banners col-4">
+      </div>
+      <div class="main-bottom-banner col-8"></div>
+    </div>
   </main>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
