Creates second banners in bottom banners

--- a/index.html
+++ b/index.html
@@ -1863,8 +1863,24 @@
         </section>
       </div>
     </div>
-    <div class="bottom-banners row">
+    <div class="bottom-banners row no-gutters">
       <div class="second-bottom-banners col-4">
+        <div class="second-b-banners__item">
+          <div class="second-b-banners__category banner__category mb-1">category</div>
+          <div class="second-b-banners__title">new iphone 6</div>
+          <div class="item__price-list">
+            <span class="item__price item__price--old mx-1">$350</span>
+            <span class="item__price item__price--new mx-1">$299,99</span>
+          </div>
+        </div>
+        <div class="second-b-banners__item">
+          <div class="second-b-banners__category banner__category mb-1">category</div>
+          <div class="second-b-banners__title">new iphone 6</div>
+          <div class="item__price-list">
+            <span class="item__price item__price--old mx-1">$350</span>
+            <span class="item__price item__price--new mx-1">$299,99</span>
+          </div>
+        </div>
       </div>
       <div class="main-bottom-banner col-8"></div>
     </div>
