Creates main bottom banner

--- a/index.html
+++ b/index.html
@@ -1882,7 +1882,17 @@
           </div>
         </div>
       </div>
-      <div class="main-bottom-banner col-8"></div>
+      <div class="main-bottom-banner col-8 row no-gutters">
+        <div class="main-b-banner__img col-6">
+          <img src="img/main_bottom_baner_image.png" alt="Bottom banner image.">
+        </div>
+        <div class="main-b-banner__text col-6">
+          <div class="second-b-banners__category banner__category">computers</div>
+          <div class="main-b-banner__title mb-3">Apple iMac 21.5</div>
+          <div class="promo__description">Lorem ipsum dolor sit amet, consectetur adipiscing dolore magna aliqua</div>
+          <div class="promo__sale">up to <span>25%</span></div>
+        </div>
+      </div>
     </div>
   </main>
   <script src="js/jquery-3.3.1.min.js"></script>
