Changes tag of buttons in main top banner from div to anchor

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               <span class="item__price item__price--old mx-1">$350</span>
               <span class="item__price item__price--new mx-1">$299,99</span>
             </div>
-            <div class="btn custom-btn">view more</div>
+            <a href="#" class="btn custom-btn">view more</a>
           </div>
         </div>
         <div class="top-banners__second-banner row flex-grow-1 align-items-center">
@@ -304,7 +304,7 @@
               <span class="item__price item__price--old mx-1">$350</span>
               <span class="item__price item__price--new mx-1">$299,99</span>
             </div>
-            <div class="btn custom-btn">view more</div>
+            <a href="#" class="btn custom-btn">view more</a>
           </div>
         </div>
       </div>
