--- a/index.html
+++ b/index.html
@@ -1865,24 +1865,24 @@
     </div>
     <div class="bottom-banners row no-gutters">
       <div class="second-bottom-banners col-4">
-        <div class="second-b-banners__item">
+        <a href="#" class="second-b-banners__item">
           <div class="second-b-banners__category banner__category mb-1">category</div>
           <div class="second-b-banners__title">new iphone 6</div>
           <div class="item__price-list">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
-        </div>
-        <div class="second-b-banners__item">
+        </a>
+        <a href="#" class="second-b-banners__item">
           <div class="second-b-banners__category banner__category mb-1">category</div>
           <div class="second-b-banners__title">new iphone 6</div>
           <div class="item__price-list">
             <span class="item__price item__price--old mx-1">$350</span>
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
-        </div>
+        </a>
       </div>
-      <div class="main-bottom-banner col-8 row no-gutters">
+      <a href="#" class="main-bottom-banner col-8 row no-gutters">
         <div class="main-b-banner__img col-6">
           <img src="img/main_bottom_baner_image.png" alt="Bottom banner image.">
         </div>
@@ -1892,7 +1892,7 @@
           <div class="promo__description">Lorem ipsum dolor sit amet, consectetur adipiscing dolore magna aliqua</div>
           <div class="promo__sale">up to <span>25%</span></div>
         </div>
-      </div>
+      </a>
     </div>
   </main>
   <script src="js/jquery-3.3.1.min.js"></script>
