--- a/index.html
+++ b/index.html
@@ -1894,6 +1894,127 @@
         </div>
       </a>
     </div>
+    <div class="new-products">
+      <h2 class="section-title mb-3">NEW PRODUCTS</h2>
+      <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+      <div class="new-products__slider">
+        <div class="new-products__item">
+          <a href="#" class="popular-prods__img hov-btn-call">
+            <img src="img/new_prod-1.jpg" alt="Popular product images">
+          </a>
+          <div class="hover-buttons__list">
+            <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+            <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+            <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+          </div>
+          <span class="item__category">category</span>
+          <a href="#" class="item__title">Asus-PadFone</a>
+          <div class="item__rating my-1">
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-regular"></span>
+          </div>
+          <div class="item__price-list mb-4">
+            <span class="item__price item__price--old mx-1">$350</span>
+            <span class="item__price item__price--new mx-1">$299,99</span>
+          </div>
+        </div>
+        <div class="new-products__item">
+          <a href="#" class="popular-prods__img hov-btn-call">
+            <img src="img/new_prod-2.jpg" alt="Popular product images">
+          </a>
+          <div class="hover-buttons__list">
+            <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+            <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+            <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+          </div>
+          <span class="item__category">category</span>
+          <a href="#" class="item__title">Asus-PadFone</a>
+          <div class="item__rating my-1">
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-regular"></span>
+          </div>
+          <div class="item__price-list mb-4">
+            <span class="item__price item__price--old mx-1">$350</span>
+            <span class="item__price item__price--new mx-1">$299,99</span>
+          </div>
+        </div>
+        <div class="new-products__item">
+          <a href="#" class="popular-prods__img hov-btn-call">
+            <img src="img/new_prod-3.jpg" alt="Popular product images">
+          </a>
+          <div class="hover-buttons__list">
+            <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+            <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+            <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+          </div>
+          <span class="item__category">category</span>
+          <a href="#" class="item__title">Asus-PadFone</a>
+          <div class="item__rating my-1">
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-regular"></span>
+          </div>
+          <div class="item__price-list mb-4">
+            <span class="item__price item__price--old mx-1">$350</span>
+            <span class="item__price item__price--new mx-1">$299,99</span>
+          </div>
+        </div>
+        <div class="new-products__item">
+          <a href="#" class="popular-prods__img hov-btn-call">
+            <img src="img/new_prod-4.jpg" alt="Popular product images">
+          </a>
+          <div class="hover-buttons__list">
+            <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+            <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+            <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+          </div>
+          <span class="item__category">category</span>
+          <a href="#" class="item__title">Asus-PadFone</a>
+          <div class="item__rating my-1">
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-regular"></span>
+          </div>
+          <div class="item__price-list mb-4">
+            <span class="item__price item__price--old mx-1">$350</span>
+            <span class="item__price item__price--new mx-1">$299,99</span>
+          </div>
+        </div>
+        <div class="new-products__item">
+          <a href="#" class="popular-prods__img hov-btn-call">
+            <img src="img/new_prod-3.jpg" alt="Popular product images">
+          </a>
+          <div class="hover-buttons__list">
+            <button type="button" class="hover-buttons__item wishlist__add-btn icon-font-heart-regular"></button>
+            <button type="button" class="hover-buttons__item shopping-cart__add-btn icon-font-cart"></button>
+            <button type="button" class="hover-buttons__item quick-view__btn icon-font-eye" data-toggle="modal" data-target="#q-view-popup"></button>
+          </div>
+          <span class="item__category">category</span>
+          <a href="#" class="item__title">Asus-PadFone</a>
+          <div class="item__rating my-1">
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-solid"></span>
+            <span class="icon-font-star-regular"></span>
+          </div>
+          <div class="item__price-list mb-4">
+            <span class="item__price item__price--old mx-1">$350</span>
+            <span class="item__price item__price--new mx-1">$299,99</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
