A minor fix in new-product section

--- a/index.html
+++ b/index.html
@@ -1896,9 +1896,9 @@
     </div>
     <div class="new-products">
       <h2 class="section-title mb-3">NEW PRODUCTS</h2>
-      <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+      <p class="section-description mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
       <div class="new-products__slider">
-        <div class="new-products__item">
+        <div class="new-products__item pt-3">
           <a href="#" class="popular-prods__img hov-btn-call">
             <img src="img/new_prod-1.jpg" alt="Popular product images">
           </a>
@@ -1921,7 +1921,7 @@
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
         </div>
-        <div class="new-products__item">
+        <div class="new-products__item pt-3">
           <a href="#" class="popular-prods__img hov-btn-call">
             <img src="img/new_prod-2.jpg" alt="Popular product images">
           </a>
@@ -1944,7 +1944,7 @@
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
         </div>
-        <div class="new-products__item">
+        <div class="new-products__item pt-3">
           <a href="#" class="popular-prods__img hov-btn-call">
             <img src="img/new_prod-3.jpg" alt="Popular product images">
           </a>
@@ -1967,7 +1967,7 @@
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
         </div>
-        <div class="new-products__item">
+        <div class="new-products__item pt-3">
           <a href="#" class="popular-prods__img hov-btn-call">
             <img src="img/new_prod-4.jpg" alt="Popular product images">
           </a>
@@ -1990,7 +1990,7 @@
             <span class="item__price item__price--new mx-1">$299,99</span>
           </div>
         </div>
-        <div class="new-products__item">
+        <div class="new-products__item pt-3">
           <a href="#" class="popular-prods__img hov-btn-call">
             <img src="img/new_prod-3.jpg" alt="Popular product images">
           </a>
