Change tag of block with new products from div to section

--- a/index.html
+++ b/index.html
@@ -1894,7 +1894,7 @@
         </div>
       </a>
     </div>
-    <div class="new-products">
+    <section class="new-products">
       <h2 class="section-title mb-3">NEW PRODUCTS</h2>
       <p class="section-description mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
       <div class="new-products__slider">
@@ -2014,7 +2014,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>    
   </main>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
