Creates latest news section and one item

--- a/index.html
+++ b/index.html
@@ -2014,7 +2014,29 @@
           </div>
         </div>
       </div>
-    </section>    
+    </section>
+    <section class="latest-news">
+      <h2 class="section-title mb-4">LATEST NEWS</h2>
+      <p class="section-description mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+      <div class="latest-news__list row">
+        <div class="latest-news__item col-4">
+          <a href="#" class="latest-news__img mb-4">
+            <img src="img/latest-news-1.jpg" alt="Latest news image" class="latest-news__img">
+          </a>
+          <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
+          <div class="latest-news__footer mt-2">
+            <span class="icon-font-baseline-today-24px">24/11/2013</span>
+            <span class="icon-font-tag-black-shape">
+              <a href="#" class="latest-news__tag">Shop,</a>
+              <a href="#" class="latest-news__tag">Discount,</a>
+              <a href="#" class="latest-news__tag">Electronics</a>
+            </span>
+          </div>
+        </div>
+        <div class="latest-news__item col-4"></div>
+        <div class="latest-news__item col-4"></div>
+      </div>
+    </section>
   </main>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
