--- a/index.html
+++ b/index.html
@@ -2020,10 +2020,15 @@
       <p class="section-description mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
       <div class="latest-news__list row">
         <div class="latest-news__item col-4">
-          <a href="#" class="latest-news__img mb-4">
-            <img src="img/latest-news-1.jpg" alt="Latest news image" class="latest-news__img">
-          </a>
-          <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
+          <div class="latest-news__mask-cont" tabindex="0">
+            <a href="#" class="latest-news__img">
+              <img src="img/latest-news-1.jpg" alt="Latest news image" class="latest-news__img">
+            </a>
+            <div class="latest-news__mask">
+              <a href="#" class="latest-news__mask-link">read more</a>
+            </div>
+          </div>
+          <a href="#" class="latest-news__title mt-4">Simple Blog demo from fashion web</a>
           <div class="latest-news__footer mt-2">
             <span class="icon-font-baseline-today-24px">24/11/2013</span>
             <span class="icon-font-tag-black-shape">
