Adds two items to latest news section

--- a/index.html
+++ b/index.html
@@ -2033,6 +2033,34 @@
             </span>
           </div>
         </div>
+        <div class="latest-news__item col-4">
+          <a href="#" class="latest-news__img mb-4">
+            <img src="img/latest-news-2.jpg" alt="Latest news image" class="latest-news__img">
+          </a>
+          <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
+          <div class="latest-news__footer mt-2">
+            <span class="icon-font-baseline-today-24px">24/11/2013</span>
+            <span class="icon-font-tag-black-shape">
+              <a href="#" class="latest-news__tag">Shop,</a>
+              <a href="#" class="latest-news__tag">Discount,</a>
+              <a href="#" class="latest-news__tag">Electronics</a>
+            </span>
+          </div>
+        </div>
+        <div class="latest-news__item col-4">
+          <a href="#" class="latest-news__img mb-4">
+            <img src="img/latest-news-3.jpg" alt="Latest news image" class="latest-news__img">
+          </a>
+          <a href="#" class="latest-news__title">Simple Blog demo from fashion web</a>
+          <div class="latest-news__footer mt-2">
+            <span class="icon-font-baseline-today-24px">24/11/2013</span>
+            <span class="icon-font-tag-black-shape">
+              <a href="#" class="latest-news__tag">Shop,</a>
+              <a href="#" class="latest-news__tag">Discount,</a>
+              <a href="#" class="latest-news__tag">Electronics</a>
+            </span>
+          </div>
+        </div>
         <div class="latest-news__item col-4"></div>
         <div class="latest-news__item col-4"></div>
       </div>
