--- a/index.html
+++ b/index.html
@@ -2066,6 +2066,61 @@
       </div>
     </section>
   </main>
+  <footer class="py-5">
+    <div class="container">
+      <img src="img/footer_logo.jpg" alt="Footer logo" class="footer__logo">
+      <p class="footer__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta ad odio sit, doloribus perspiciatis nam corrupti architecto at ipsum recusandae quis provident nesciunt sapiente vitae porro sunt ab natus laudantium!</p>
+      <hr class="footer__separator">
+      <div class="footer__bottom row">
+        <div class="footer__links col-3">
+          <h4 class="footer-links__title mb-3">Information</h4>
+          <ul class="footer-link__list">
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Specials</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">New products</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Top sellers</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Our stores</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Contacn us</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Page configuration</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Sitemap</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Blog</a></li>
+          </ul>
+        </div>
+        <div class="footer__links col-3">
+          <h4 class="footer-links__title mb-3">My account</h4>
+          <ul class="footer-link__list">
+            <li class="footer-link__item"><a href="#" class="footer-link__link">My orders</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">My merchandise returns</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">My credit slips</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">My adresses</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">My personal info</a></li>
+          </ul>
+        </div>
+        <div class="footer__links col-3">
+          <h4 class="footer-links__title mb-3">Categories</h4>
+          <ul class="footer-link__list">
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Dresses</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Skirts</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Outerwear</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Tops</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Brazzers</a></li>
+            <li class="footer-link__item"><a href="#" class="footer-link__link">Shces</a></li>
+          </ul>
+        </div>
+        <div class="footer__social col-3">
+          <h4 class="footer-links__title mb-4">Newsleter</h4>
+          <form action="#" method="GET" class="footer__subscribe">
+            <input type="text" class="footer__input" placeholder="ENTER YOUR E-MAIL">
+            <button class="footer__button icon-font-right-straight-arrow"></button>
+          </form>
+          <div class="footer__icons-list">
+            <a href="#" class="footer-icons-list__item icon-font-facebook-f-brands"></a>
+            <a href="#" class="footer-icons-list__item icon-font-twitter-brands"></a>
+            <a href="#" class="footer-icons-list__item icon-font-google-plus-logo"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
