Adds hovers and focus to footer

--- a/index.html
+++ b/index.html
@@ -2109,7 +2109,7 @@
         <div class="footer__social col-3">
           <h4 class="footer-links__title mb-4">Newsleter</h4>
           <form action="#" method="GET" class="footer__subscribe">
-            <input type="text" class="footer__input" placeholder="ENTER YOUR E-MAIL">
+            <input type="email" class="footer__input" placeholder="ENTER YOUR E-MAIL">
             <button class="footer__button icon-font-right-straight-arrow"></button>
           </form>
           <div class="footer__icons-list">
