Adds responsive media-queries and test label

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="test"></div>
   <!-- Modals (located this, becouse it recommended by authors Bootstrap 4. If I understood correctly.) -->
   <div class="modal fade" id="q-view-popup" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
