Responsive (-1850) - header-top: Separates and creates border for 'Buy this theme' button

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               </li>
             </ul>
               <span class="navbar-text ml-auto">
-                <a href="#">BUY THIS THEMEUs</a>
+                <a href="#" class="buy-theme">BUY THIS THEMEUs</a>
               </span>
           </div>
         </nav>
