Changes widht of search form

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="header-bottom__logo navbar-brand">
         <img src="img/header-logo.png" alt="Header logo">
       </div>
-      <div class="header-bottom__search col-8">
+      <div class="header-bottom__search">
         <form class="form-inline row align-items-stretch justify-content-end" action="http://saney.ru/calculator/px-rem-calculator.php" method="GET">
           <input class="search__input form-control input-group-prepend col-7" type="search" placeholder="Search for product..." aria-label="Search">
           <select class="search__select form-control col-3" id="search-select">
@@ -157,7 +157,7 @@
           <button class="search__button btn icon-font-search-solid col-auto" type="submit"></button>
         </div>
       </form>
-      <div class="header-bottom__icons-list d-flex flex-grow-1 justify-content-end align-items-center">
+      <div class="header-bottom__icons-list d-flex justify-content-end align-items-center">
         <a href="#" class="header-bottom__icon-item icon-font-heart-regular vish-list-popup"></a>
         <div class="vish-list">
           <div class="vish-list__header">
