Adds title in HTML to total price nuber in header bottom

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <a href="#" class="shopping-cart__checkout-button shopping-cart__btn">Checkout</a>
           </div>
         </div>
-        <span class="header-bottom__total-price">$259.99</span>
+        <span class="header-bottom__total-price" title="Total price">$259.99</span>
       </div>
     </div>
   </header>
